--- a/NetworkSettings.json
+++ b/NetworkSettings.json
@@ -13,7 +13,8 @@
     "CurrencyAddress": "0x8babbb98678facc7342735486c851abd7a0d17ca",
     "PairCurrency": "0x8a9424745056Eb399FD19a0EC26A14316684e274",
     "Explorer":"https://rinkeby.etherscan.io/tx/",
-    "LiquidityPool":"0x16b9a82891338f9bA80E2D6970FddA79D1eb0daE"
+    "LiquidityPool":"0x16b9a82891338f9bA80E2D6970FddA79D1eb0daE",
+    "QueryParam":"bsc_testnet"
   },
   {
     "IsProduction": true,
@@ -29,7 +30,8 @@
     "CurrencyAddress": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
     "PairCurrency": "0x6b175474e89094c44da98b954eedeac495271d0f",
     "Explorer":"https://etherscan.io/tx/",
-    "LiquidityPool":"0xA478c2975Ab1Ea89e8196811F51A7B7Ade33eB11"
+    "LiquidityPool":"0xA478c2975Ab1Ea89e8196811F51A7B7Ade33eB11",
+    "QueryParam":"ethereum"
 
   },
   {
@@ -46,7 +48,8 @@
     "CurrencyAddress": "0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c",
     "PairCurrency": "0x55d398326f99059fF775485246999027B3197955",
     "Explorer":"https://bscscan.com/tx/",
-    "LiquidityPool":"0x16b9a82891338f9bA80E2D6970FddA79D1eb0daE"
+    "LiquidityPool":"0x16b9a82891338f9bA80E2D6970FddA79D1eb0daE",
+    "QueryParam":"bsc"
 
   },
   {
@@ -63,7 +66,8 @@
     "CurrencyAddress": "0xae13d989dac2f0debff460ac112a837c89baa7cd",
     "PairCurrency": "0x78867BbEeF44f2326bF8DDd1941a4439382EF2A7",
     "Explorer":"https://testnet.bscscan.com/tx/",
-    "LiquidityPool":"0x16b9a82891338f9bA80E2D6970FddA79D1eb0daE"
+    "LiquidityPool":"0x16b9a82891338f9bA80E2D6970FddA79D1eb0daE",
+    "QueryParam":"bsc_testnet"
 
   },
   {
@@ -80,7 +84,8 @@
     "CurrencyAddress": "0x0000000000000000000000000000000000001010",
     "PairCurrency": "0xc2132D05D31c914a87C6611C10748AEb04B58e8F",
     "Explorer":"https://polygonscan.com/tx/",
-    "LiquidityPool":"0x16b9a82891338f9bA80E2D6970FddA79D1eb0daE"
+    "LiquidityPool":"0x16b9a82891338f9bA80E2D6970FddA79D1eb0daE",
+    "QueryParam":"matic"
   },
   {
     "IsProduction": false,
@@ -96,7 +101,8 @@
     "CurrencyAddress": "0x9c3C9283D3e44854697Cd22D3Faa240Cfb032889",
     "PairCurrency": "0xc2132D05D31c914a87C6611C10748AEb04B58e8F",
     "Explorer":"https://mumbai.polygonscan.com/tx/",
-    "LiquidityPool":"0x16b9a82891338f9bA80E2D6970FddA79D1eb0daE"
+    "LiquidityPool":"0x16b9a82891338f9bA80E2D6970FddA79D1eb0daE",
+    "QueryParam":"matic"
 
   }
 ]
